--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 
 project:
   name: "test"
-  data_directory: "data"
+  data_directory: "/home/pmuehleder/data/game_metadata/sources"
 
 datasets:
   mobygames:
