--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,32 @@
 #
 #    make update-requirements
 #
+-e git+git@github.com:diggr/diggrtoolbox.git@44cd4d1dc41161c6c5b8d2ae3388f578115e6b01#egg=diggrtoolbox
+aniso8601==6.0.0          # via flask-restful
 certifi==2019.3.9         # via requests
 chardet==3.0.4            # via requests
 click==7.0
 flask-cors==3.0.7         # via provit
-flask==1.0.2              # via flask-cors, provit
+flask-restful==0.3.7
+flask==1.0.2              # via flask-cors, flask-restful, provit
 idna==2.7                 # via requests
 isodate==0.6.0            # via provit, rdflib
 itsdangerous==1.1.0       # via flask, provit
 jinja2==2.10.1            # via flask, provit
+jsonschema==2.6.0
 markupsafe==1.1.1         # via jinja2, provit
+numpy==1.16.3             # via pandas
+pandas==0.24.2
 provit==1.0.1
 pyparsing==2.4.0          # via provit, rdflib
+python-dateutil==2.8.0    # via pandas
+python_levenshtein==0.12.0
+pytz==2019.1              # via flask-restful, pandas
 pyyaml==5.1
 rdflib-jsonld==0.4.0      # via provit
 rdflib==4.2.2             # via provit, rdflib-jsonld
 requests==2.20.1
-six==1.12.0               # via flask-cors, isodate, provit
+roman==3.0
+six==1.12.0               # via flask-cors, flask-restful, isodate, provit, python-dateutil
 urllib3==1.24.2           # via requests
 werkzeug==0.15.2          # via flask, provit
