--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,10 @@
 #    make update-requirements
 #
 -e git+git://github.com/diggr/diggrtoolbox.git@44cd4d1dc41161c6c5b8d2ae3388f578115e6b01#egg=diggrtoolbox
-aniso8601==6.0.0
+-e git+git://github.com/missinglinks/zip_archive@ad52e2e3ec94f10cf5689998c62031636bd4b804#egg=zip_archive
+aniso8601==7.0.0
+atomicwrites==1.3.0
+attrs==19.1.0
 certifi==2019.3.9
 chardet==3.0.4
 click==7.0
@@ -13,16 +16,21 @@ flask-cors==3.0.7
 flask-restful==0.3.7
 flask==1.0.2
 idna==2.7
+importlib-metadata==0.18
 isodate==0.6.0
 itsdangerous==1.1.0
 jinja2==2.10.1
 jsonschema==2.6.0
 markupsafe==1.1.1
-numpy==1.16.3
+more-itertools==7.1.0
+numpy==1.16.4
 pandas==0.24.2
 pip-tools==3.6.1
+pluggy==0.12.0
 provit==1.0.1
+py==1.8.0
 pyparsing==2.4.0
+pytest==4.5.0
 python-dateutil==2.8.0
 python_levenshtein==0.12.0
 pytz==2019.1
@@ -33,4 +41,9 @@ requests==2.20.1
 roman==3.0
 six==1.12.0
 urllib3==1.24.2
+wcwidth==0.1.7
 werkzeug==0.15.2
+zipp==0.5.2
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools==36.5.0        # via pytest, python-levenshtein
