--- a/requirements.in
+++ b/requirements.in
@@ -4,4 +4,5 @@ provit==1.0.1
 PyYAML==5.1
 pandas==0.24.2
 -e git+git://github.com/diggr/diggrtoolbox.git@44cd4d1dc41161c6c5b8d2ae3388f578115e6b01#egg=diggrtoolbox
+-e git+git://github.com/missinglinks/zip_archive@ad52e2e3ec94f10cf5689998c62031636bd4b804#egg=zip_archive
 Flask-RESTful==0.3.7
