--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,8 +4,8 @@
 #
 #    make update-requirements
 #
--e git+git://github.com/diggr/diggrtoolbox.git@44cd4d1dc41161c6c5b8d2ae3388f578115e6b01#egg=diggrtoolbox
-aniso8601==6.0.0
+-e git+https://github.com/diggr/diggrtoolbox.git@44cd4d1dc41161c6c5b8d2ae3388f578115e6b01#egg=diggrtoolbox
+aniso8601==8.0.0
 certifi==2019.3.9
 chardet==3.0.4
 click==7.0
@@ -18,14 +18,14 @@ itsdangerous==1.1.0
 jinja2==2.10.1
 jsonschema==2.6.0
 markupsafe==1.1.1
-numpy==1.16.3
+numpy==1.18.1
 pandas==0.24.2
-pip-tools==3.6.1
+pip-tools==4.3.0
 provit==1.0.1
 pyparsing==2.4.0
-python-dateutil==2.8.0
+python-dateutil==2.8.1
 python_levenshtein==0.12.0
-pytz==2019.1
+pytz==2019.3
 pyyaml==5.1
 rdflib-jsonld==0.4.0
 rdflib==4.2.2
@@ -34,3 +34,6 @@ roman==3.0
 six==1.12.0
 urllib3==1.24.2
 werkzeug==0.15.2
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
